resources/assets/sass/files/search.scss
.search-intro {
  width: 100%;
  text-align: center;
  height: 20vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.search-intro h1 {
  font-family: "Montserrat", sans-serif;
  font-weight: 400;
}

.search-input {
  width: 100%;
}

.search-input .search-box{
  margin: 0 auto;
  padding: 6px 20px 6px;
  width: 60%;
  max-width: 600px;
  border-radius: 4px;
  font-size: 1.3rem;
  font-weight: 100;
  border: none;
  display: block;
}

.search-container {
  width: 100%;
  position: relative;
  &::before {
    content: "";
    display: block;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    background: linear-gradient(to right, #003cff 0%, #553390 100%);
    width: calc(60% + 10px);
    max-width: 610px;
    height: 120%;
    z-index: -10;
    border-radius: 6px;
  }
}

.ais-search-box--reset-wrapper {
  box-sizing: content-box;
  display: block;
  position: absolute;
  right: 17%;
  top: 29%;
}

.ais-search-box-reset {
  cursor: pointer;
  margin: 0;
  border: 0;
  padding: 0;
  background-color: initial;
  border: initial;
  color: initial;
  width: 25px;
  fill: #bfc7d8;
}

.studentcard {
  border-radius: 10px;
  background-color: #f7f7f7;
  position: relative;
  width: 40%;
  max-width: 400px;
  height: 300px;
  margin: 1rem 0.8rem;
  cursor: pointer;
  box-shadow: 1px 0px 18px -6px rgba(0,0,0,0.75);
  transition: 0.3s all;

  &:hover {
    box-shadow: 1px 0px 18px -2px rgba(0,0,0,0.75);
    transform: scale(1.02);
  }
}

.studentcard>.screenshot {
  width: 100%;
  height: 55%;
  position: absolute;
  top: 0;
  left: 0;
  object-fit: cover;
  border-radius: 10px 10px 0 0;
  filter: brightness(0.8) saturate(1.2);
}

.studentcard .portrait {
  border-radius: 9999px;
  height: 70%;
  object-fit: cover;
  background-color: white;
  margin: auto 1.3rem;
}

.studentcard>.informations {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  align-items: center;
  position: absolute;
  height: 46%;
  width: 100%;
  top: 54%;
  left: 0;
  border-radius: 0 0 10px 10px;
  box-shadow: 0px -9px 22px -11px rgba(0,0,0,0.75);
  transition: all 0.4s;
}

.studentcard:hover>.informations {
  box-shadow: 0px -9px 34px -11px rgba(0,0,0,0.75);
  transform: scale(1.05);
}

.studentcard .card-text {
  flex: 1 1 auto;
}

.card-text {
  color: black;
  padding-right: 10px;
  line-height: 0.8;
  align-self: flex-start;
  margin-top: 10%;
}

.card-text h3 {
  font-family: inherit;
  line-height: initial;
  color: inherit;
  font-size: initial;
  margin: 0;
}

.card-text small {
  color: #596662;
}


.card-text em {
  font-style: italic;
  margin-right: 0.1rem;
}

.resultscontainer {
  width: 90%;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  align-content: center;
  align-items: flex-start;
  margin: 50px auto;
}

.entries {
  width: 70%;
}

.searchresults {
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.facets {
  width: 25%;
  min-width: 280px;
  box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.75);
  padding: 10px;
  position: relative;
  border-radius: 7px;

  &::before {
    content:"";
    display: block;
    position: absolute;
    top:0;
    left:0;
    width: 100%;
    height: 5px;
    background: linear-gradient(to right, rgba(0,60,255,1) 0%, rgba(85,51,144,1) 100%);
    border-radius: 7px 7px 0 0;
  }

  >div {
    margin-bottom: 2rem;
  }
}

.facet-title {
  font-weight: bold;
  font-size: 1rem;
  margin: 1rem 0.5rem;
}

.ais-refinement-list--checkbox {
  display: none;
}

.ais-refinement-list--label {
  margin: 0 0.5rem;
  color: #6473a5;
}

.ais-refinement-list--label:hover,
.ais-menu--link:hover,
.ais-menu--item__active .ais-menu--link,
.ais-hierarchical-menu--list .facet-item.active:hover,
.ais-hierarchical-menu--list .facet-item.active {
  color: #6487ff;
}

.ais-refinement-list--item__active .ais-refinement-list--label {
  color: #395bff;
}

.ais-refinement-list--item__active .ais-refinement-list--label:hover,
.ais-menu--item__active .ais-menu--link:hover,
.ais-hierarchical-menu--list .facet-item.active:hover {
  text-decoration: line-through;
  color: #1a38ff;
}

.ais-refinement-list--count,
.ais-hierarchical-menu--count,
.ais-menu--count,
.ais-star-rating--count,
.ais-toggle--count {
  position: relative;
  color: #6473a5;
  padding: 0px 10px;
  border-radius: 99px;
  background-color: #f0f1f6;
  margin-left: 0.2rem;
  font-size: 0.9rem;
}

.ais-refinement-list--label,
.ais-hierarchical-menu--list .facet-item,
.ais-menu--link,
.ais-price-ranges--item {
  cursor: pointer;
  line-height: 1.5em;
}

.ais-current-refined-values {
  position: relative;
}


.ais-show-more {
  font-weight: bold;
  opacity: .7;
  padding-left: 4px;
  position: relative;
  line-height: 25px;
  font-size: .9em;
  cursor: pointer;
  color: #6473a5;
}
.ais-show-more:hover,
.ais-show-more:focus {
  opacity: 1;
}
.ais-show-more::before {
  font-family: "Font Awesome 5 Free";
  font-style: inherit;
  font-weight: inherit;
  text-decoration: inherit;
  display: inline-block;
  position: relative;
  content: '';
  margin: 0 5px 0 0;
}

.ais-show-more__inactive::before {
  content: "\f107";
}

.ais-show-more__active::before {
  content: "\f106";
}

.algolia-logo {
  height: 20px;
}

.algolia-link {
  margin-top: 5px;
  position: absolute;
  right: 20%;
}

.algolia-link-container {
  position: relative;
}

.search-pagination {
  margin-top: 60px;
}
.search-pagination ul {
  font-size: 0;
  list-style-type: none;
  text-align: center;
}
.search-pagination li {
  font-size: 14px;
  display: inline;
}
.search-pagination a,
.search-pagination span {
  padding: 8px 12px;
  text-decoration: none;
  color: #000;
  border: 1px solid #eee;
}


.search-pagination a:hover {
  background: #f5f5f5;
}
.search-pagination li:first-child a {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}
.search-pagination li:last-child a {
  border-right: 1px solid #eee;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}
.search-pagination li.ais-pagination--item__active a {
  color: white;
  border-color: #3164ff;
  background: #3164ff;
}
.search-pagination li.ais-pagination--item__active a:hover {
  cursor: default;
}
.search-pagination li.ais-pagination--item__disabled a,
.search-pagination li.ais-pagination--item__disabled span {
  background-color: #eaeaea;
  border-color: #bbb;
  color: #888;
  cursor: not-allowed;
}
.search-pagination li.ais-pagination--item__disabled a:hover {
  background: none;
}

.embed {
  display: none;
  position: absolute;
  height: calc(100vh - 60px - 0.9em);
  top: 0;
  left: 0;
  width: 100%;
  background-color: black;
  z-index: 1000;
}

.flex-embed {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-content: stretch;
  align-items: stretch;
  height: 100%;
  width: 100%;
  transition: 1s all;
}

.left-panel {
  width: 25vw;
  background-color: white;
  box-shadow: 15px 0px 28px -15px rgba(0,0,0,0.75);
  z-index: 10;
  position: relative;
  transition: 1s all;
  padding: 1.2rem;

  &.retracted {
    box-shadow: none;
  }

  &.expanded {
  }
}

.frame-panel {
  flex: 1 1 auto;
  border: none;
  background: linear-gradient(135deg, rgba(0,60,255,1) 15%,rgba(85,51,144,1) 56%);
  background-size: 400% 400%;
  animation: loadingResume 10s ease infinite;
  .retracted {
    width: 100%;
    transition: 1s transform, 1s box-shadow;
  }
}

.retract {
  position: absolute;
  top: 50%;
  right: 0;
  transform: translate(100%,-50%);
  height: 50px;
  width: 30px;
  cursor: pointer;
  background-color: #fff;
  border-radius: 0 5px 5px 0;
}

.retract::after {
  font-family: "Font Awesome 5 Free";
  font-style: inherit;
  font-weight: 900;
  font-size: 1.5rem;
  text-decoration: inherit;
  display: block;
  position: absolute;
  content: '';
  top: 50%;
  left: 50%;
  transform: translate(-60%,-50%);
}

.retract__active::after {
  content: "\f104";
}

.retract__inactive::after {
  content: "\f105";
}

.close-embed::after {
  font-family: "Font Awesome 5 Free";
  font-style: inherit;
  font-weight: 900;
  font-size: 2.5rem;
  text-decoration: inherit;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 18px;
  right: 18px;
  content: "\F00D";
  cursor: pointer;
  line-height: 1.7rem;
  width: 55px;
  height: 55px;
  border-radius: 9999px;
  background-color: white;
  box-shadow: 0px 0px 31px -4px rgba(0,0,0,0.75);
  transition: all 0.4s;
}

.close-embed:hover::after{
  transform: scale(1.1);
  box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.75);
}

.flex-embed-expanded {
  width: 100%;
}

.flex-embed-retracted {
  width: 125vw;
  transform: translateX(-20%);
}

@keyframes loadingResume {
  0% {
    background-position: 0% 50%
  }
  50% {
    background-position: 100% 50%
  }
  100% {
    background-position: 0% 50%
  }
}

.student-name {
  font-size: 2rem;
}

.internship-preference,
.internship-duration {
  font-size: 1.2rem;
}
.internship-preference>.name-category ,
.internship-duration>.name-category {
  color: #3a54ab;
}

.description {
  margin-top: 3rem;
  line-height: 1.3;
}

.resume-static {
  color: white;
  display: block;
  position: absolute;
  text-align: center;
  background: linear-gradient(to right, rgba(0,60,255,1) 0%, rgba(85,51,144,1) 100%);
  width: 85%;
  padding: 10px 0;
  border-radius: 40px;
  bottom: 5%;
  transition: all 0.4s;
}

.resume-static:hover {
  color: white;
  text-decoration: none;
  transform: scale(1.1);
}


@media screen and (max-device-width: $responsive-breakpoint){
  .entries{
    width: 100%;
  }
  .facets {
    display: none;
  }
  .resultscontainer {
    flex-direction: column-reverse;
    align-items: center;
  }
  .studentcard {
    width: 100%;
  }
  .left-panel {
    width: 90vw;
  }
  .flex-embed-retracted {
    width: 190vw;
    transform: translateX(-47.4%);
  }

  .flex-embed-expanded {
    width: 190vw;
  }
}

